# labz

./: .gitignore  README.md  pyproject.toml
labz/: __init__.py  cli.py  converter.py  history.py  imagine_backend.py  markdown.py  ocr.py  ollama_backend.py  structure.py  video_backend.py
locllm/: convert.py  history.py  imagine_backend.py  ollama_backend.py  preprocess.py
locllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
